--- a/frontend/assets/stylesheets/base/_lists.scss
+++ b/frontend/assets/stylesheets/base/_lists.scss
@@ -23,6 +23,11 @@ nav ol {
 %u-unstyled {
     margin: 0;
     list-style: none;
+    &.events-list {
+        &:first-child {
+            margin-top: -10px;
+        }
+    }
 }
 
 // List of inline items
