--- a/frontend/assets/stylesheets/layout/_headings.scss
+++ b/frontend/assets/stylesheets/layout/_headings.scss
@@ -61,7 +61,7 @@
     .header-bar__title {
         @include fs-headline(3);
         @include rem((
-            padding: $gs-baseline 0,
+            padding: $gs-gutter 0,
             max-width: gs-span(8)
         ));
     }
@@ -105,7 +105,7 @@
             .header-bar__guardian-live-logo {
                 @include rem((
                     right: $gs-gutter,
-                    top: $gs-baseline*2
+                    top: $gs-gutter*2
                 ));
             }
             i {
@@ -118,12 +118,23 @@
         }
     }
 
+    @include mq(desktop) {
+        &.header-bar--guardian-live {
+            .header-bar__guardian-live-logo {
+                @include rem((
+                    right: $gs-gutter,
+                    top: $gs-gutter*2+$gs-baseline
+                ));
+            }
+        }
+    }
+
     @include mq(mem-full) {
         @include rem((
             padding-left: gs-span(2)+$gs-gutter*2 //180
         ));
         .header-bar__title {
-            @include fs-headline(5);
+            @include fs-headline(6);
         }
     }
 }
