--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -21,6 +21,10 @@ html {
         }
     }
 
+    &.home-page {
+        background-image: url(/assets/images/homepage/new/applause.jpg);
+    }
+
 }
 
 body {
