--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -1,4 +1,5 @@
 @import views.support.Asset
+@import model.Benefits
 
 @main("Home Page", isBrochure = true, htmlClass = "home-page") {
 
@@ -22,7 +23,7 @@
 
     @* ===== Bring the Guardian to life ===== *@
 
-    <div class="home-slice u-cf home-slice--red">
+    <div class="home-slice u-cf home-slice--red home-slice--slice-two">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
                 <h2 class="home-slice__headline">Events that bring the Guardian to life</h2>
@@ -44,7 +45,7 @@
             </div>
             <div class="home-slice__copy-block">
                 <div class="home-slice__media">
-                    <img src="@Asset.at("images/homepage/teaser-image1.jpg")" alt="" />
+                    <img src="@Asset.at("images/homepage/new/alan_pulitzer_prize_speech.jpg")" alt="" />
                 </div>
                 <div class="home-slice__offset-copy">
                     <blockquote class="home-slice__copy--quote">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere.</blockquote>
@@ -57,7 +58,7 @@
 
     @* ===== Big ideas ===== *@
 
-    <div class="home-slice u-cf home-slice--green">
+    <div class="home-slice u-cf home-slice--green home-slice--slice-four">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
                 <h2 class="home-slice__headline">A home for big ideas</h2>
@@ -82,7 +83,7 @@
             </div>
             <div class="home-slice__copy-block">
                 <div class="home-slice__media">
-                    <img src="@Asset.at("images/homepage/teaser-image1.jpg")" alt="" />
+                    <img src="@Asset.at("images/homepage/new/audience_discussion1.jpg")" alt="" />
                 </div>
                 <div class="home-slice__offset-copy">
                     <p class="home-slice__copy">This is membership beta. We have ambitious plans, and new features will be added regularly.  Guardian membership will grow into a vibrant, self-organising community of free-thinkers.</p>
@@ -96,13 +97,13 @@
     @* ===== Join Today ===== *@
 
     <div class="home-slice home-slice--join-today">
-        <div class="home-slice__inner">
+        <div class="home-slice__inner u-cf">
             <h2 class="home-slice__headline">Join membership today</h2>
             <ul class="l-row u-unstyled join-today__join-boxes">
 
                 @* === Friend === *@
 
-                <li class="join-today__join-box">
+                <li class="join-today__join-box l-row__item">
                     <div class="join-today__join-box--header join-today__join-box--header--friends">Friend</div>
                     <div class="join-today__price">
                     <div class="join-today__price--bold-free">£FREE</div>
@@ -113,11 +114,12 @@
 
                 @* === Partner === *@
 
-                <li class="join-today__join-box">
+                <li class="join-today__join-box l-row__item">
                     <div class="join-today__join-box--header join-today__join-box--header--partner">Partner</div>
                     <div class="join-today__price l-row">
-                        <div class="join-today__price--bold">£135/yr<span class="save-price">Save £45/yr</span></div>
-                        <div class="join-today__price--bold">£15/mo</div>
+                        <div class="join-today__price--bold l-row__item">£135/yr<span class="save-price">Save £45/yr</span></div>
+                        <div class="join-today__sep l-row__item"></div>
+                        <div class="join-today__price--bold l-row__item">£15/mo</div>
                     </div>
                     <p class="join-today__teaser join-today__teaser--description">Get closer to the stories and experience the Guardian brought to life, with priority booking and discounted tickets</p>
                     <a class="action action--secondary-button" href="/join">Learn more about membership</a>
@@ -125,11 +127,12 @@
 
                 @* === Patron === *@
 
-                <li class="join-today__join-box">
+                <li class="join-today__join-box l-row__item">
                     <div class="join-today__join-box--header join-today__join-box--header--patron">Patron</div>
                     <div class="join-today__price l-row">
-                        <div class="join-today__price--bold">£540/yr<span class="save-price">Save £135/yr</span></div>
-                        <div class="join-today__price--bold">£60/mo</div>
+                        <div class="join-today__price--bold l-row__item">£540/yr<span class="save-price">Save £135/yr</span></div>
+                        <div class="join-today__sep l-row__item"></div>
+                        <div class="join-today__price--bold l-row__item">£60/mo</div>
                     </div>
                     <p class="join-today__teaser join-today__teaser--description">Support the Guardian’s mission of promoting the open exchange of ideas, with a backstage pass to the Guardian</p>
                     <a class="action action--secondary-button" href="/join/patron">Learn more about patron</a>
