--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -77,7 +77,8 @@ $fs-headlines: (
         32 36, // 5
         36 40, // 6
         40 44, // 7
-        44 48  // 8
+        44 48, // 8
+        28 34  // 9 - brochure copy
 );
 
 $fs-bodyHeadings: (
@@ -119,7 +120,7 @@ $c-brandBlue: #214583;
 $c-brandLightBlue: #94b1ca;
 $c-error: #d61d00;
 
-$c-body: #545454;
+$c-body: #333333; // Changed from #545454
 
 $c-neutral1: #333333;
 $c-neutral2: #767676;
