updated feedback form to same html markup structure as other forms

--- a/frontend/app/views/fragments/form/feedback.scala.html
+++ b/frontend/app/views/fragments/form/feedback.scala.html
@@ -8,32 +8,29 @@
     <div class="fieldset__fields">
 
         <div class="form-field">
-            <label class="label" for="category">I have feedback about
-                <div class="input">
-                    <select name="category" id="category" data-validation="required" data-error-message="Please select a
-                    feedback category">
-                        <option value="">Select feedback category</option>
-                        <option>Report a problem</option>
-                        <option>Suggest an improvement</option>
-                        <option>Give general feedback</option>
-                        <option>Accessibility issue</option>
-                    </select>
-                </div>
-            </label>
+            <label class="label" for="category">I have feedback about</label>
+            <div class="input">
+                <select name="category" id="category" data-validation="required" data-error-message="Please select a
+                feedback category">
+                    <option value="">Select feedback category</option>
+                    <option>Report a problem</option>
+                    <option>Suggest an improvement</option>
+                    <option>Give general feedback</option>
+                    <option>Accessibility issue</option>
+                </select>
+            </div>
         </div>
 
         <div class="form-field">
-            <label class="label" for="page">Page (web address/url)
-                <input class="text-input text-input--block" name="page" id="page" type="text"/>
-            </label>
+            <label class="label" for="page">Page (web address/url)</label>
+            <input class="text-input text-input--block" name="page" id="page" type="text"/>
         </div>
 
         <div class="form-field">
-            <label class="label" for="feedback">Comments
-                <textarea name="feedback" id="feedback" class="textarea--long textarea"
-                          data-error-message="Please enter your comment"
-                          data-validation="required"></textarea>
-            </label>
+            <label class="label" for="feedback">Comments</label>
+            <textarea name="feedback" id="feedback" class="textarea--long textarea"
+                      data-error-message="Please enter your comment"
+                      data-validation="required"></textarea>
         </div>
 
     </div>
@@ -49,18 +46,16 @@
     <div class="fieldset__fields">
 
         <div class="form-field">
-            <label class="label" for="name">Name
-                <input name="name" id="name" class="text-input text-input-block" type="text" data-validation="required"
-                       data-error-message="Please enter your name"/>
-            </label>
+            <label class="label" for="name">Name</label>
+            <input name="name" id="name" class="text-input text-input-block" type="text" data-validation="required"
+                   data-error-message="Please enter your name"/>
         </div>
 
         <div class="form-field">
-            <label class="label" for="email">Email address
-                <input name="email" id="email" class="text-input text-input-block" type="email"
-                       data-validation="required"
-                       data-error-message="Please enter your email address"/>
-            </label>
+            <label class="label" for="email">Email address</label>
+            <input name="email" id="email" class="text-input text-input-block" type="email"
+                   data-validation="required"
+                   data-error-message="Please enter your email address"/>
         </div>
 
     </div>
