--- a/frontend/app/views/fragments/form/submit.scala.html
+++ b/frontend/app/views/fragments/form/submit.scala.html
@@ -5,6 +5,7 @@
     <div class="fieldset__heading"></div>
     <div class="fieldset__fields">
         <div class="actions js-waiting-container">
+            @fragments.form.errorMessageDisplay()
             <button type="submit" class="submit-input action action--logged-in js-submit-input">@ctaText</button>
             <div class="i-wait">
                 <img class="i-wait__throbber" src="@Asset.at("images/wait.gif")" alt=""/>
