--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -27,7 +27,7 @@
                 <ul class="inline-list">
                     <li class="inline-list__item"><a href="/help">Help</a></li>
                     <li class="inline-list__item">&#149;</li>
-                    <li class="inline-list__item"><a href="/tier/cancel">Cancel Guardian membership</a></li>
+                    <li class="inline-list__item"><a id="qa-cancel-membership" href="/tier/cancel">Cancel Guardian membership</a></li>
                 </ul>
             </div>
         </div>
