--- a/frontend/app/views/joiner/payment/paymentForm.scala.html
+++ b/frontend/app/views/joiner/payment/paymentForm.scala.html
@@ -41,7 +41,7 @@ marketingChoices: model.StatusFields, passwordExists: Boolean)(implicit token: p
                 userFields.address1, userFields.address2, userFields.address3, userFields.postcode, userFields.address4, userFields.country)
                 @fragments.form.marketingChoices(marketingChoices.receiveGnmMarketing, marketingChoices.receive3rdPartyMarketing)
 
-                @if(passwordExists != true) {
+                @if(!passwordExists) {
                     @fragments.form.passwordDetail()
                 }
 
