Add id to confirm cancellation button

--- a/frontend/app/views/tier/cancel/confirm.scala.html
+++ b/frontend/app/views/tier/cancel/confirm.scala.html
@@ -98,7 +98,7 @@
                         <option>10</option>
                     </select>
                 </div>
-                <button class="action-cta action-cta--confirm action-cta--full-width-mobile">Cancel membership account</button>
+                <button id="qa-confirm-cancel" class="action-cta action-cta--confirm action-cta--full-width-mobile">Cancel membership account</button>
             </fieldset>
         </form>
 
