added .js for asset mapping with zxcvbn and closed script tag

--- a/frontend/app/views/fragments/javaScriptLaterSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptLaterSteps.scala.html
@@ -6,8 +6,8 @@
     var curl = {
         apiName: 'require',
         paths: {
-            zxcvbn: '@Asset.at("javascripts/lib/zxcvbn/zxcvbn")'
+            zxcvbn: '@Asset.at("javascripts/lib/zxcvbn/zxcvbn.js")'
         }
     };
 </script>
-<script src='@Asset.at("javascripts/lib/curl/curl.js")'><script>
+<script src='@Asset.at("javascripts/lib/curl/curl.js")'></script>
