--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -108,8 +108,12 @@
                     <div class="join-today__price">
                     <div class="join-today__price--bold-free">£FREE</div>
                     </div>
-                    <p class="join-today__teaser join-today__teaser--description">Stay up to date and book tickets to Guardian Live events</p>
-                    <a class="action action--secondary-button" href="/join">Learn more about membership</a>
+                    <div class="join-today__teaser">
+                        <p class="join-today__teaser--description">Stay up to date and book tickets to Guardian Live events</p>
+                        <a class="action action--secondary-button" href="/join">
+                            <span class="action__text">Learn more about membership</span>
+                        </a>
+                    </div>
                 </li>
 
                 @* === Partner === *@
@@ -121,8 +125,12 @@
                         <div class="join-today__sep l-row__item"></div>
                         <div class="join-today__price--bold l-row__item">£15/mo</div>
                     </div>
-                    <p class="join-today__teaser join-today__teaser--description">Get closer to the stories and experience the Guardian brought to life, with priority booking and discounted tickets</p>
-                    <a class="action action--secondary-button" href="/join">Learn more about membership</a>
+                    <div class="join-today__teaser">
+                        <p class="join-today__teaser--description">Get closer to the stories and experience the Guardian brought to life, with priority booking and discounted tickets</p>
+                        <a class="action action--secondary-button" href="/join">
+                            <span class="action__text">Learn more about membership</span>
+                        </a>
+                    </div>
                 </li>
 
                 @* === Patron === *@
@@ -134,8 +142,12 @@
                         <div class="join-today__sep l-row__item"></div>
                         <div class="join-today__price--bold l-row__item">£60/mo</div>
                     </div>
-                    <p class="join-today__teaser join-today__teaser--description">Support the Guardian’s mission of promoting the open exchange of ideas, with a backstage pass to the Guardian</p>
-                    <a class="action action--secondary-button" href="/join/patron">Learn more about patron</a>
+                    <div class="join-today__teaser">
+                        <p class="join-today__teaser--description">Support the Guardian’s mission of promoting the open exchange of ideas, with a backstage pass to the Guardian</p>
+                        <a class="action action--secondary-button" href="/join/patron">
+                            <span class="action__text">Learn more about patron</span>
+                        </a>
+                    </div>
                 </li>
 
 
