--- a/frontend/assets/stylesheets/components/_action.scss
+++ b/frontend/assets/stylesheets/components/_action.scss
@@ -95,9 +95,9 @@
     background-color: $offWhite;
     color: $black;
     @include rem((
-        padding: 8px 8px 8px 18px,
-        min-width: 220px,
-        width: auto
+        padding: 8px 8px 8px 18px
+//        min-width: 220px,
+//        width: auto
     ));
 
     .brochure-container__join-box & {
