--- a/frontend/assets/stylesheets/layout/_homeslice.scss
+++ b/frontend/assets/stylesheets/layout/_homeslice.scss
@@ -44,9 +44,19 @@
         .home-slice__headline-block {
             float: left;
             width: 320px;
-            height: 160px;
+            min-height: 160px;
             padding: $gs-gutter $gs-gutter*8 $gs-gutter $gs-gutter;
             background-color: transparentize($mem-blue, .1);
+
+            @include mq(tablet) {
+                width: 320px;
+                position: absolute;
+            }
+
+            @include mq(mem-full) {
+                width: 480px;
+                position: static;
+            }
         }
 
         .home-slice__headline {
@@ -55,11 +65,16 @@
         }
 
         .home-slice__copy-block {
-            float: right;
-            width: 660px;
+            width: 100%;
             margin-top: 400px; // 560-160
             background-color: $white;
-            padding: $gs-gutter;
+            padding: $gs-gutter/2;
+
+            @include mq(tablet) {
+                padding: $gs-gutter;
+                float: right;
+                width: 660px;
+            }
 
             .home-slice__copy {
                 @include fs-headline(9);
@@ -91,27 +106,58 @@
             z-index: 2;
             right: 0;
             top: 0;
-            width: 500px;
+            width: 320px;
+            @include mq(tablet) {
+                width: 320px;
+            }
+
+            @include mq(mem-full) {
+                width: 500px;
+            }
         }
 
         .home-slice__copy-block {
             position: relative;
             z-index: 1;
-            float: left;
-            width: 800px;
             margin-top: 0;
-            padding: 0 0 0 20px;
-            .home-slice__media {
+            width: 100%;
+
+            @include mq(tablet) {
+                padding: 0 $gs-gutter $gs-gutter;
+            }
+
+            @include mq(desktop) {
                 float: left;
-                width: 700px;
-                height: 420px;
+                width: 800px;
+                padding: 0 0 0 20px;
+            }
+
+            .home-slice__media {
+                width: 100%;
+
                 overflow: hidden;
+
+                @include mq(tablet) {
+                    max-width: 460px;
+                    max-height: 276px;
+                }
+
+                @include mq(desktop) {
+                    float: left;
+                    max-width: 700px;
+                    max-height: 420px;
+                }
             }
             .home-slice__offset-copy {
                 display: block;
-                float: right;
-                width: 620px;
                 padding-top: 20px;
+                width: 100%;
+
+                @include mq(desktop) {
+                    float: right;
+                    width: 620px;
+                }
+
                 .home-slice__copy--quote {
                     display: block;
                     @include fs-bodyCopy(5);
@@ -164,7 +210,14 @@
         }
 
         .join-today__join-boxes {
-            padding: $gs-gutter;
+            padding: $gs-gutter/2;
+            @include mq(tablet) {
+                padding: $gs-gutter;
+            }
+
+            @include mq($from: mobile, $to: desktop) {
+                display: block;
+            }
         }
 
         .join-today__join-box {
@@ -181,6 +234,11 @@
                     width: gs-span(3),
                     margin-right: $gs-gutter
                 ));
+            }
+
+            @include mq($from: tablet, $to: desktop) {
+                width: 100%;
+                padding: 68px+$gs-gutter*2 $gs-gutter $gs-gutter*2;
             }
 
             @include mq(desktop) {
@@ -237,27 +295,55 @@
         .join-today__price {
             @include fs-headline(2);
 
+            @include rem((
+                //height: 45px,
+                margin-top: $gs-gutter,
+                padding: $gs-baseline/2 0
+            ));
+
             @include mq(tablet) {
                 @include fs-headline(2);
+                .join-today__price--bold:last-child {
+                    text-align: right;
+                }
+            }
+
+            @include mq($from: tablet, $to: desktop) {
+                display: inline-block;
+                width: 30%;
+                margin-right: 14%;
+                margin-top: 0;
+                vertical-align: top;
+                .join-today__price--bold:last-child {
+                    text-align: left;
+                }
             }
 
             @include mq(desktop) {
                 @include fs-headline(3);
             }
-            @include rem((
-                height: 45px,
-                margin-top: $gs-gutter,
-                padding: $gs-baseline/2 0
-            ));
+
+            .join-today__price--bold {
+                padding: 0;
+                @include mq($from: tablet, $to: desktop) {
+                    width: 100%;
+                    text-align: left;
+                }
+            }
 
             .join-today__sep {
                 @include flex($flex-grow: 0, $flex-shrink: 0, $flex-basis: 1px);
                 background-color: $c-neutral5;
                 height: 100%;
-            }
-
-            .join-today__price--bold:last-child {
-                text-align: right;
+                @include mq($to: tablet) {
+                    display: none;
+                }
+                @include mq($from: tablet, $to: desktop) {
+                    width: 100%;
+                    height: 1px;
+                    padding: 0;
+                    margin: $gs-gutter 0;
+                }
             }
 
             .join-today__price--bold-free {
@@ -274,21 +360,66 @@
             }
         }
 
-        .join-today__teaser--description {
-            @include rem((
-                padding-top: $gs-gutter,
-                margin-bottom: $gs-gutter,
-                min-height: 140px
-            ));
-            @include fs-bodyCopy(2);
+        .join-today__teaser {
+            .join-today__teaser--description {
+                @include rem((
+                    padding-top: $gs-gutter,
+                    margin-bottom: $gs-gutter,
+                    min-height: 140px
+                ));
+                @include fs-bodyCopy(2);
 
-            @include mq(desktop) {
-                @include fs-bodyCopy(3);
+                @include mq(tablet) {
+                    @include fs-bodyCopy(3);
+                }
+            }
+
+            @include mq($from: tablet, $to: desktop) {
+                display: inline-block;
+                width: 55%;
+                vertical-align: top;
+                .join-today__teaser--description {
+                    min-height: 0;
+                    padding-top: 0;
+                }
             }
         }
 
         .action {
-            margin: 0;
+            width: 100%;
+
+            &:after {
+                margin-left: 0;
+            }
+
+            @include mq($to: tablet) {
+                width: 100%;
+                margin: 0;
+                min-width: 0;
+                text-align: right;
+                .action__text {
+                    max-width: 67%;
+                    display: inline-block;
+                    vertical-align: middle;
+                    text-align: left;
+                }
+                &:after {
+                    float: none;
+                    display: inline-block;
+                    vertical-align: middle;
+                }
+            }
+
+            @include mq($from: tablet, $to: desktop) {
+                width: auto;
+                min-width: 260px;
+            }
+
+            @include mq(desktop) {
+                .action__text {
+                    max-width: 76%;
+                }
+            }
         }
     }
 
@@ -307,22 +438,16 @@
             width: gs-span(12)+$gs-gutter*2;
         }
 
-        .home-slice__inner .home-slice__headline-block {
-            width: 320px;
-        }
-
         &.home-slice--content .home-slice__inner .home-slice__headline-block {
             width: 340px;
         }
+
+
     }
 
     @include mq(mem-full) {
         .home-slice__inner {
             width: gs-span(14)+$gs-gutter*2;
-        }
-
-        .home-slice__inner .home-slice__headline-block {
-            width: 480px;
         }
 
         &.home-slice--content .home-slice__inner .home-slice__headline-block {
