Made start of about us page

--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -19,6 +19,7 @@
 @import 'pages/tier';
 @import 'pages/tickets';
 @import 'pages/login';
+@import 'pages/about';
 /* ==========================================================================
    Webfonts pages
    ========================================================================== */
