--- a/frontend/app/views/fragments/javaScriptLaterSteps.scala.html
+++ b/frontend/app/views/fragments/javaScriptLaterSteps.scala.html
@@ -10,4 +10,4 @@
         }
     };
 </script>
-<script src='@Asset.at("javascripts/lib/curl/curl.js")'><script>
+<script src='@Asset.at("javascripts/lib/curl/curl.js")'></script>
