--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -9,30 +9,19 @@
             <div class="package__current-indicator">Your Current Package</div>
         }
         <div class="package__inner">
-            <h2 class="package__title">@tier</h2>
-                <div class="package__price">
-                    @fragments.benefits.priceInfo(Benefits.details(tier))
-                </div>
-                <p class="package__leadin">@Benefits.details(tier).leadin</p>
-                <ul class="package__list-element">
-                    @for((header, body) <- Benefits.details(tier).list) {
-                    <li class="benefits-title">@header</li>
-                    <li class="benefits-copy">@body</li>
-                    }
-                </ul>
-                <div class="u-cf">
-                @if(!isCurrentPackage) {
-                    @if(currentTier == Tier.Friend || tier == Tier.Friend) {
-                        <a href="/tier/change/@tier.toString.toLowerCase" class="action action-cta--confirm">
-                            @Benefits.details(tier).cta
-                        </a>
-                    } else {
-                        <span class="action action-cta--cancel action-cta--disabled">
-                            Coming soon
-                        </span>
-                    }
+
+            @fragments.tier.details(tier)
+            @if(!isCurrentPackage) {
+                @if(currentTier == Tier.Friend || tier == Tier.Friend) {
+                    <a href="/tier/change/@tier.toString.toLowerCase" class="action action-cta--confirm">
+                        @Benefits.details(tier).cta
+                    </a>
+                } else {
+                    <span class="action action-cta--cancel action-cta--disabled">
+                        Coming soon
+                    </span>
                 }
-                </div>
+            }
         </div>
     </div>
 }
