--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -8,15 +8,17 @@
     <div class="home-slice home-slice--epic u-cf">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
-                <h1 class="home-slice__headline">Introducing Guardian Membership</h1>
+                <h1 class="home-slice__headline">We believe that the open exchange of information,
+                    ideas and opinions has the power to change the world for the better</h1>
             </div>
             <div class="home-slice__copy-block">
-                <p class="home-slice__copy">We believe the open exchange of information, ideas and opinions has the power to change the world for the better</p>
-                <p class="home-slice__copy">Guardian Membership is the community for those who share this ideal.</p>
-                <a class="action action--join home-slice__action" href="/about">Learn more</a>
-                <p class="home-slice__copy">We believe the open exchange of information, ideas and opinions has the power to change the world for the better</p>
-                <p class="home-slice__copy">Guardian Membership is the community for those who share this ideal.</p>
-                <a class="action action--join home-slice__action" href="/about">Learn more</a>
+                <p class="home-slice__copy"></p>
+                <p class="home-slice__copy">Guardian Membership is the community for those who share this belief.</p>
+                <a class="action action--join home-slice__action action--secondary-button" href="/about">Learn more</a>
+                <p class="home-slice__copy">Guardian Membership brings you closer to the stories of the day,
+                    connects you to the conversations that matter and introduces you to fellow members who share
+                    your interests.</p>
+                <a class="action action--join home-slice__action" href="/join">Join today</a>
             </div>
         </div>
     </div>
@@ -29,8 +31,12 @@
                 <h2 class="home-slice__headline">Events that bring the Guardian to life</h2>
             </div>
             <div class="home-slice__copy-block">
-                <p class="home-slice__copy">Guardian Live is a programme of discussions, debates, interviews, keynote speeches and festivals that brings the Guardian’s journalism to life. </p>
-                <p class="home-slice__copy">Events that for the first time take the power of open journalism from print and digital into live experiences.</p>
+                <p class="home-slice__copy">Guardian Live is a programme of discussions, debates, interviews,
+                    keynote speeches and festivals.
+                </p>
+                <p class="home-slice__copy">Members can attend events that take the power of open journalism
+                    from print and digital into live experiences.
+                </p>
                 <a class="action action--secondary-button" href="/events">See our live events</a>
             </div>
         </div>
@@ -49,8 +55,8 @@
                 </div>
                 <div class="home-slice__offset-copy">
                     <blockquote class="home-slice__copy--quote">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere.</blockquote>
-                    <cite class="home-slice__copy--cite">Alan Rusbridger, editor of the Guardian</cite>
-                    <a class="action action--join" href="/join/patron">Start your journey as patron</a>
+                    <cite class="home-slice__copy--cite">Alan Rusbridger, editor-in-chief of the Guardian</cite>
+                    <a class="action action--join" href="/join/patron">Start your journey as Patron</a>
                 </div>
             </div>
         </div>
@@ -64,12 +70,15 @@
                 <h2 class="home-slice__headline">A home for big ideas</h2>
             </div>
             <div class="home-slice__copy-block">
-                <p class="home-slice__copy">In 2016, the Guardian will reopen the Midland Goods Shed at London’s King’s Cross. This will mark the coming together of extraordinary cultural and educational institutions with the Guardian, to create a new kind of civic space.</p>
-                <p class="home-slice__copy">The building will be a hub for big ideas and conversation, offering events, activities and courses from Guardian Live and institutions we admire, as well as being the home of Guardian Membership.</p>
-                <div class="l-row l-row--items-2">
-                    <div class="l-row__item"><a class="action action--join" href="http://www.theguardian.com/membership">More about the building</a></div>
-                    <div class="l-row__item"><a class="action action--secondary-button" href="http://www.theguardian.com/membership">Building progress blog</a></div>
-                </div>
+                <p class="home-slice__copy">
+                    In 2016, the Guardian will reopen the Midland Goods Shed at London’s King’s Cross to create a new kind of civic space.
+                </p>
+                <p class="home-slice__copy">
+                    The building will be a hub for big ideas and stimulating conversations. It will host events,
+                    activities and courses from Guardian Live and institutions we admire, as well as being the home of Guardian Membership.
+                </p>
+                <a class="action action--join" href="http://www.theguardian.com/membership">More about the building</a>
+                <a class="action action--secondary-button" href="http://www.theguardian.com/membership">Building progress blog</a>
             </div>
         </div>
     </div>
@@ -79,15 +88,19 @@
     <div class="home-slice home-slice--content u-cf">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
-                <h2 class="home-slice__headline">Founding members: Join us at the start</h2>
+                <h2 class="home-slice__headline">Founding members: join us at the start</h2>
             </div>
             <div class="home-slice__copy-block">
                 <div class="home-slice__media">
                     <img src="@Asset.at("images/homepage/new/audience_discussion1.jpg")" alt="" />
                 </div>
                 <div class="home-slice__offset-copy">
-                    <p class="home-slice__copy">This is membership beta. We have ambitious plans, and new features will be added regularly.  Guardian membership will grow into a vibrant, self-organising community of free-thinkers.</p>
-                    <p class="home-slice__copy">Help build and shape this community by joining as a Founding Partner or Patron, with the guarantee that the price you pay today will never rise.</p>
+                    <p class="home-slice__copy">
+                        Guardian membership is launching in beta. We have ambitious plans, and new features will be added regularly. Guardian membership will grow into a vibrant, self-organising community of free-thinkers.
+                    </p>
+                    <p class="home-slice__copy">
+                        Help to build and shape this community by joining as a Founding Partner or Patron,
+                        with the guarantee that the price you pay today will never rise.</p>
                     <a class="action action--join" href="/join">Join today</a>
                 </div>
             </div>
@@ -106,7 +119,7 @@
                 <li class="join-today__join-box l-row__item">
                     <div class="join-today__join-box--header join-today__join-box--header--friends">Friend</div>
                     <div class="join-today__price">
-                    <div class="join-today__price--bold-free">£FREE</div>
+                    <div class="join-today__price--bold-free">FREE</div>
                     </div>
                     <div class="join-today__teaser">
                         <p class="join-today__teaser--description">Stay up to date and book tickets to Guardian Live events</p>
@@ -121,9 +134,10 @@
                 <li class="join-today__join-box l-row__item">
                     <div class="join-today__join-box--header join-today__join-box--header--partner">Partner</div>
                     <div class="join-today__price l-row">
-                        <div class="join-today__price--bold l-row__item">£135/yr<span class="save-price">Save £45/yr</span></div>
+                        <div class="join-today__price--bold l-row__item">£135/year<span class="save-price">Save
+                            £45/yr</span></div>
                         <div class="join-today__sep l-row__item"></div>
-                        <div class="join-today__price--bold l-row__item">£15/mo</div>
+                        <div class="join-today__price--bold l-row__item">£15/month</div>
                     </div>
                     <div class="join-today__teaser">
                         <p class="join-today__teaser--description">Get closer to the stories and experience the Guardian brought to life, with priority booking and discounted tickets</p>
@@ -138,14 +152,15 @@
                 <li class="join-today__join-box l-row__item">
                     <div class="join-today__join-box--header join-today__join-box--header--patron">Patron</div>
                     <div class="join-today__price l-row">
-                        <div class="join-today__price--bold l-row__item">£540/yr<span class="save-price">Save £135/yr</span></div>
+                        <div class="join-today__price--bold l-row__item">£540/year<span class="save-price">Save
+                            £135/yr</span></div>
                         <div class="join-today__sep l-row__item"></div>
-                        <div class="join-today__price--bold l-row__item">£60/mo</div>
+                        <div class="join-today__price--bold l-row__item">£60/month</div>
                     </div>
                     <div class="join-today__teaser">
                         <p class="join-today__teaser--description">Support the Guardian’s mission of promoting the open exchange of ideas, with a backstage pass to the Guardian</p>
                         <a class="action action--secondary-button" href="/join/patron">
-                            <span class="action__text">Learn more about patron</span>
+                            <span class="action__text">Learn more about Patrons</span>
                         </a>
                     </div>
                 </li>
