Removed any reference to passwordExists for upgrade form as it is not needed.

--- a/frontend/app/views/tier/upgrade/upgradeForm.scala.html
+++ b/frontend/app/views/tier/upgrade/upgradeForm.scala.html
@@ -1,4 +1,4 @@
-@(targetTier: com.gu.membership.salesforce.Tier.Tier, userFields: model.PrivateFields, passwordExists: Boolean)(implicit token: play.filters.csrf.CSRF.Token)
+@(targetTier: com.gu.membership.salesforce.Tier.Tier, userFields: model.PrivateFields)(implicit token: play.filters.csrf.CSRF.Token)
 @import helper._
 
 @main("Upgrade Payment") {
