--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -101,7 +101,7 @@
                     <p class="home-slice__copy">
                         Help to build and shape this community by joining as a Founding Partner or Patron,
                         with the guarantee that the price you pay today will never rise.</p>
-                    <a class="action action--join" href="/join">Join today</a>
+                    <a class="action action--join" href="/join" id="qa-join">Join today</a>
                 </div>
             </div>
         </div>
