Add commit-id to build info for deployment tracking

--- a/frontend/app/views/fragments/footer.scala.html
+++ b/frontend/app/views/fragments/footer.scala.html
@@ -11,6 +11,7 @@
         </ul>
         <div class="l-footer__misc">
             <div class="really-serious-copyright">© @{new DateTime().year.getAsText} Guardian News and Media Limited or its affiliated companies. All rights reserved. Build #@app.BuildInfo.buildNumber</div>
+            <!-- build-commit-id: @app.BuildInfo.gitCommitId -->
         </div>
     </div>
 </footer>
